<resources>
    <string name="app_name">AMOLED Scrum Poker</string>
    <string name="navigation_numbers">Numbers</string>
    <string name="navigation_t_shirt">T-shirt</string>
    <string name="navigation_settings">Settings</string>
    <string name="selection_up_chevron">up_chevron</string>
    <string name="numbers_0">0</string>
    <string name="numbers_half">½</string>
    <string name="numbers_1">1</string>
    <string name="numbers_2">2</string>
    <string name="numbers_3">3</string>
    <string name="numbers_5">5</string>
    <string name="numbers_8">8</string>
    <string name="numbers_13">13</string>
    <string name="numbers_20">20</string>
    <string name="numbers_40">40</string>
    <string name="numbers_100">100</string>
    <string name="infinity">∞</string>
    <string name="question_mark">\?</string>
    <string name="t_shirt_xxs">XXS</string>
    <string name="t_shirt_xs">XS</string>
    <string name="t_shirt_s">S</string>
    <string name="t_shirt_m">M</string>
    <string name="t_shirt_l">L</string>
    <string name="t_shirt_xl">XL</string>
    <string name="t_shirt_xxl">XXL</string>
    <string name="settings_zoom">Zoom Selection</string>
    <string name="settings_hide">Hide card</string>
    <string name="settings_hide_true">Yes</string>
    <string name="settings_divisor">/</string>
    <string name="settings_hide_false">No</string>
    <string name="settings_reveal">Reveal Gesture</string>
    <string name="settings_reveal_tap">Tap</string>
    <string name="settings_reveal_swipe">Swipe</string>
    <string name="settings_font_size">Font Size</string>
    <string name="settings_font_size_small">Small</string>
    <string name="settings_font_size_large">Large</string>
    <string name="settings_zoom_true">On</string>
    <string name="settings_zoom_false">Off</string>
    <string name="settings_animation_speed">Animation Speed</string>
    <string name="settings_animation_speed_normal">Normal</string>
    <string name="settings_animation_speed_fast">Fast</string>
</resources>
